--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,6 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
+body {
+  background-color: rgb(226 232 240);
+}
